# trade_stat_engine

./: .gitignore  .gitlab-ci.yml  Dockerfile  README.md  docker-entrypoint.sh  pyproject.toml
.github/workflows/: test.yml
src/: app.py  conftest.py  main.py  schemas.py  segment_tree.py  symbols_storage.py
src/tests/: test_app.py  test_schemas.py  test_segment_tree.py  test_symbols_storage.py
