[project]
name = "trade-stat-engine"
version = "0.1.0"
description = ""
authors = [
    {name = "Piotr Gryko",email = "piotr.gryko@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.115.10,<0.116.0)",
    "python-decouple (>=3.8,<4.0)",
    "numpy (>=2.2.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-asyncio = "^0.25.3"
black = "^25.1.0"
ruff = "^0.9.9"
pylama = "^8.4.1"

